k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
spec:
  replicas: 3
  selector:
     matchLabels:
       app: sample-app
  template:
     metada:
      lables:
        app: sample-app
     spec:
       containers:
       - name: sample-container
         image: your-dockerhub/springboot-eks-app:latest
         ports:
         - containerPort: 8080
